js/js.translator/testData/incremental/invalidation/inlineFunctionWithObjectWithCrossModuleInliner/lib1/l1.kt
interface DemoInterface {
    fun doAnything(): Int
}
